syntax = "proto3";

package org.firstinspires.ftc.teamcode.services.Service.Planner;

option java_package = "org.firstinspires.ftc.teamcode.proto";
option java_outer_classname = "TrajectoryVisualizationDataProtobuf";

message TrajectoryVisualizationData {
  repeated EvaluatedTrajectory evaluated_trajectories = 1;
  repeated double robot_state = 2;
}

message EvaluatedTrajectory {
  message Trajectory {
    repeated double point = 1;
  }
  repeated Trajectory trajectory = 1;
  double cost = 2;
  bool is_selected = 3;
}
